fix(ArticleDetail): fix comment paragraph spacing
ref:
2024-03-product#2-ZN-015

--- a/src/common/styles/utils/content.comment.css
+++ b/src/common/styles/utils/content.comment.css
@@ -6,7 +6,7 @@
   }
 
   & > * + * {
-    margin: var(--spacing-base) 0;
+    margin: var(--spacing-x-tight) 0;
   }
 
   & > *:last-child {
